--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Dasmoto's Arts & Crafts</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
