changes to stylesheet

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Ben Verspeak's World</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1 id="title">Welcome to the world of Ben Verspeak</h1>
