--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 id="title">Welcome to the world of Ben Verspeak</h1>
+        <h1 id="title">The world according to: Ben Verspeak</h1>
     </body>
 </html>
