--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Ben Verspeak's World</title>
+        <title>verspeak.studio</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 id="title">The world according to: Ben Verspeak</h1>
+        <h1 id="title">verspeak.studio</h1>
     </body>
 </html>
