--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>verspeakdesign.studio</title>
+        <title>Ben Verspeak</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <h1>verspeak design studio</h1>
+            <h1>Hi, I'm Ben,</h1>
+            <h2>and I'm a web developer.</h2>
             <nav>
                 <ul>
                     <li><a class="active" href="#home">home</a></li>
