--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Ben Verspeak</title>
+        <title>BV / Web Developer</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
