--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>BV / Web Developer</title>
+        <title>Ben Verspeak / Web Developer</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>    
-            <nav>
-                <ul>
-                    <li><a class="active" href="#home">home</a></li>
-                    <li><a href="#about">about</a></li>
-                    <li><a href="#work">work</a></li>
-                    <li><a href="#contact">contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <h1>Hi, I'm Ben,</h1>
-        <h2>and I'm a web developer.</h2>
-        <footer>
-            <p>made with pride by benjamin verspeak. copyright 2021.</p>
-        </footer>
+        <section>
+            <header>
+                <nav>
+                    <a class="active" href="#home">Home</a>
+                    <a href="#news">Work</a>
+                    <a href="#contact">Contact</a>
+                    <a href="#about">About</a>
+                </nav>
+            </header>
+            <main>
+                <div class="heading">
+                    <div class="text">
+                        <h1>Hi, I'm Ben.</h1>
+                        <p>I am an <em>aspiring</em> web developer in Chippenham, UK. I like making things for the front-end of the web. This is my home where I share my projects old and new. </p>
+                    </div>
+                    <img src="http://clipart-library.com/images_k/cartoon-man-transparent/cartoon-man-transparent-18.png">
+                </div>
+                <div class="portfolio">
+                    <p>Portfolio goes here.</p>
+                </div>
+            </main>
+            <footer class="page-footer">
+                &copy; 2021 Ben Verspeak
+            </footer>
+        </section>
     </body>
 </html>
